syntax = "proto3";

package baker.codegen.v1;

import "baker/ir/v1/file.proto";
import "baker/pkg/v1/package.proto";

// Request sent by baker to the concrete language code generator in it's stdin.
message CodegenRequest {
  // The packages processed.
  baker.pkg.v1.PackageGraph packages = 1;
  // IR files generated by all the previous layers.
  //
  // These are already merged using baker rules.
  repeated baker.ir.v1.IrFile ir_files = 2;
  // Folder to where save generated files.
  string output_folder = 3;
}

// Response received by baker via the code generator executable's stdout.
message CodegenResponse {
  // Error message. If non-empty, code generation failed.
  //
  // This follows the same rules that layer error follows.
  optional string error = 1;
}
