syntax = "proto3";

package baker.ir.v1;

import "baker/ir/v1/types.proto";

// A IR file.
//
// Include all the definitions generated by layers.
message IrFile {
  // Package graph file id associated with this IR file.
  uint32 file_id = 1;

  // All generated types.
  repeated Type types = 2;
  // All generated aliases.
  repeated TypeAlias aliases = 3;
  // All generated interfaces.
  repeated Interface interfaces = 4;
  // Free-standing functions.
  repeated Function functions = 5;
}
